model-in-image/lb-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: domain1-cluster-1-external-lb
  namespace: sample-domain1-ns
spec:
  ports:
  - name: default
    port: 8001
    protocol: TCP
    targetPort: 8001
  selector:
    weblogic.domainUID: domain1
    weblogic.clusterName: cluster-1
  sessionAffinity: None
  type: LoadBalancer
