model-in-image/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sample-domain1-admin-server
  namespace: sample-domain1-ns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host:
    http:
      paths:
      - path: /console
        pathType: Prefix
        backend:
          service:
            name: sample-domain1-admin-server
            port: 
              number: 7001
